# ghevaluator

./:  CONTRIBUTING.md  CONTRIBUTING.md  Galaxy-Workflow-Workflow_constructed_from_history__Assembly_Hands_on_Siyu_Chen_.ga  Galaxy-Workflow-assemblyhands-onsiyu-chenvisible_true.ga  LICENSE  MANIFEST.in  Makefile  README.md  auto_generated_workflow.ga  history_compare.py  main.py  manually_extracted_workflow.ga  pyproject.toml  requirements.txt  setup.py  standard_workflow.ga
.github/workflows/: Python Workflow.yml  python-app.yml  test.yml  unit&_integration_tests.yml
docs/: .buildinfo  api_documentation.html  conf.py  contributing.html  genindex.html  history_compare.html  index.html  installation.html  main.html  modules.html  motivation.html  motivation.rst  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  usage.rst.txt
docs/src/: conf.py  contributing.rst  history_compare.rst  installation.rst  usage.rst
ghevaluator/: __init__.py  __main__.py  ghevaluator_main.py  history_compare.py  main.py  main_command.py
ghevaluator/templates/: report.html
integration_test/: ghevaluator_command.py
intergration_test/: ghevaluator_command.py  history_compare.py  main.py  main_command.py
src/: history_compare.py  main.py  report.json
src/docs/: api_documentation.rst  conf.py  index.rst  (+3 more)
tests/: __init__.py  history_compare.py  main.py  report.json  test_ghevaluator.py  test_ghevaluator_command.py  test_history_compare.py  test_main.py  test_try.py
(+14 files in other folders)
